fix z-index

--- a/sass/about.scss
+++ b/sass/about.scss
@@ -93,7 +93,7 @@ h4 {
 }
 
 .left-sidebar {
-  z-index: 999;
+  z-index: 99;
   color: #fff;
   width: 45px;
   position: absolute;
